--- a/index.html
+++ b/index.html
@@ -1,5 +1,9 @@
 <html>
   <head>
     <title>About me</title>
-    <meta name=
-     </head>
+  </head>
+  <body>
+    <h2>This is my dog</h2>
+      <img src="dog.jpg">
+  </body>
+</html>
