--- a/index.html
+++ b/index.html
@@ -1,9 +1,11 @@
 <html>
   <head>
-    <title>About me</title>
+    <title>Dogs</title>
   </head>
   <body>
-    <h2>This is my dog</h2>
+    <h1>German Shepherd</h1>
       <img src="dog.jpg">
+    <h2>Siberian Husky</h2>
+   
   </body>
 </html>
