--- a/index.html
+++ b/index.html
@@ -4,8 +4,10 @@
   </head>
   <body>
     <h1>German Shepherd</h1>
-      <img src="dog.jpg">
-    <h2>Siberian Husky</h2>
-   
+      <img src="dog.jpg" height="200px">
+    <h2></h2>
+   </body>
+  <body>
+    <h1>Siberian Husky</h1>
   </body>
 </html>
