--- a/index.html
+++ b/index.html
@@ -1,12 +1,20 @@
 <html>
   <head>
     <title>Dogs</title>
+    <meta name= "keywords" content= "Dogs, dog products">
+    <meta name= "author" content="Joceline Atancuri">
   </head>
   <body>
-    <h1>German Shepherd</h1>
-      <img src="dog.jpg" height="200px">
+    <h1>Different Dog Breeds</h1>
+      <ul>
+        <li>German Shepherd</li>
+        <li>Siberian Husky</li>
+        <li>Labrador Retriever</li>
+        <li>Beagle</li>
+    <h2>German Shepherd</h2>
+      <img src="dog.jpg" height="300px">
     <h2></h2>
-   </body>
+    </body>
   <body>
     <h1>Siberian Husky</h1>
   </body>
