--- a/index.html
+++ b/index.html
@@ -15,5 +15,6 @@
     <h2>German Shepherd</h2>
       <img src="dog.jpg" height="300px">
     <h2>Siberian Husky</h2>
+      <img src="" height="300px">
    </body>
 </html>
