--- a/index.html
+++ b/index.html
@@ -15,6 +15,6 @@
     <h2>German Shepherd</h2>
       <img src="dog.jpg" height="300px">
     <h2>Siberian Husky</h2>
-      <img src="" height="300px">
+      <img src="https://www.google.co.uk/url?sa=i&rct=j&q=&esrc=s&source=images&cd=&ved=0ahUKEwjw5aPJxovUAhWHuBoKHcOJCtEQjRwIBw&url=https%3A%2F%2Fwww.pinterest.com%2Fexplore%2Fsiberian-husky-training%2F&psig=AFQjCNErgLNkgNgfJP9EDXNWBrhpiG_6yA&ust=1495819093605487&cad=rjt" height="300px">
    </body>
 </html>
