--- a/index.html
+++ b/index.html
@@ -15,6 +15,6 @@
     <h2>German Shepherd</h2>
       <img src="dog.jpg" height="300px">
     <h2>Siberian Husky</h2>
-      <img src="https://www.google.co.uk/url?sa=i&rct=j&q=&esrc=s&source=images&cd=&ved=0ahUKEwjw5aPJxovUAhWHuBoKHcOJCtEQjRwIBw&url=https%3A%2F%2Fwww.pinterest.com%2Fexplore%2Fsiberian-husky-training%2F&psig=AFQjCNErgLNkgNgfJP9EDXNWBrhpiG_6yA&ust=1495819093605487&cad=rjt" height="300px">
+      <img src="https://www.google.co.uk/imgres?imgurl=https%3A%2F%2Fupload.wikimedia.org%2Fwikipedia%2Fcommons%2Fa%2Fa3%2FBlack-Magic-Big-Boy.jpg&imgrefurl=https%3A%2F%2Fen.wikipedia.org%2Fwiki%2FSiberian_Husky&docid=AZ46wqjIoYEzFM&tbnid=01_hGSMas7Gj7M%3A&vet=10ahUKEwjRkuS-xovUAhUIw4MKHe2aCqUQMwhiKB4wHg..i&w=524&h=429&safe=active&bih=841&biw=1852&q=siberian%20husky&ved=0ahUKEwjRkuS-xovUAhUIw4MKHe2aCqUQMwhiKB4wHg&iact=mrc&uact=8" height="300px">
    </body>
 </html>
