--- a/index.html
+++ b/index.html
@@ -15,6 +15,6 @@
     <h2>German Shepherd</h2>
       <img src="dog.jpg" height="300px">
     <h2>Siberian Husky</h2>
-      <img src="https://upload.wikimedia.org/wikipedia/commons/a/a3/Black-Magic-Big-Boy.jpg" height="300px">
+      <img src="siberian-husky.jpg" height="300px">
    </body>
 </html>
