--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     </ul>   
     <h2>German Shepherd</h2>
       <img src="dog.jpg" height="300px">
+      <p> German Shepherds are very alert and outgoing. They are good with kids and with cats. These dogs are easy to train while puppies. 
     <h2>Siberian Husky</h2>
       <img src="siberian-husky.jpg" height="300px">
    </body>
