--- a/index.html
+++ b/index.html
@@ -17,5 +17,9 @@
       <p> German Shepherds are very alert and outgoing. They are good with kids and with cats. These dogs are easy to train while puppies. </p>
     <h2>Siberian Husky</h2>
       <img src="siberian-husky.jpg" height="300px">
+    <h2>Labrador Retriever</h2>
+      <img src="" height="">
+    <h2>Beagle</h2>
+      <img src="" height="">
    </body>
 </html>
