--- a/index.html
+++ b/index.html
@@ -20,6 +20,6 @@
     <h2>Labrador Retriever</h2>
       <img src="" height="">
     <h2>Beagle</h2>
-      <img src="" height="">
+      <img src="beagle.jpg" height="300px">
    </body>
 </html>
