--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <ul>
         <li>German Shepherd</li>
         <li>Siberian Husky</li>
-        <li>Labrador Retriever</li>
+        <li>Golden Retriever</li>
         <li>Beagle</li>
     </ul>   
     <h2>German Shepherd</h2>
@@ -17,8 +17,8 @@
       <p> German Shepherds are very alert and outgoing. They are good with kids and with cats. These dogs are easy to train while puppies. </p>
     <h2>Siberian Husky</h2>
       <img src="siberian-husky.jpg" height="300px">
-    <h2>Labrador Retriever</h2>
-      <img src="" height="">
+    <h2>Golden Retriever</h2>
+      <img src="golden-retriever.jpg" height="300px">
     <h2>Beagle</h2>
       <img src="beagle.jpg" height="300px">
    </body>
