--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <title>Dogs</title>
     <meta name= "keywords" content= "Dogs, dog products">
     <meta name= "author" content="Joceline Atancuri">
+    <link rel="stylesheet" type="text/css" href="stylesheet.css">
   </head>
   <body>
     <h1>Different Dog Breeds</h1>
