--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
         <li>Siberian Husky</li>
         <li>Golden Retriever</li>
         <li>Beagle</li>
-    </ul>   
+    </ul> 
+    <p>These are the most popular dog breeds.</p>
     <h2>German Shepherd</h2>
       <img src="dog.jpg" height="300px">
       <p>  </p>
