--- a/index.html
+++ b/index.html
@@ -23,6 +23,6 @@
       <img src="golden-retriever.jpg" height="300px">
     <h2>Beagle</h2>
       <img src="beagle.jpg" height="300px">
-    <a href="http:/Jatancuri.github.io/guess/index.html"></a>
+    <a href="http://Jatancuri.github.io/guess/index.html"><p> Click here toplay a game</p></a>
    </body>
 </html>
